--- a/Backend/package.json
+++ b/Backend/package.json
@@ -10,10 +10,17 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@solana/web3.js": "^1.95.3",
     "bip39": "^3.1.0",
+    "body-parser": "^1.20.2",
+    "bs58": "^6.0.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "ethers": "^6.13.2",
     "express": "^4.19.2",
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "pg": "^8.12.0",
+    "redis": "^4.7.0"
   },
   "type": "module"
 }
