--- a/Backend/package.json
+++ b/Backend/package.json
@@ -16,6 +16,7 @@
     "bs58": "^6.0.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "ethers": "^6.13.2",
     "express": "^4.19.2",
     "nodemon": "^3.1.4",
