--- a/Backend/package.json
+++ b/Backend/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^16.4.5",
     "ethers": "^6.13.2",
     "express": "^4.19.2",
+    "ioredis": "^5.4.1",
     "nodemon": "^3.1.4",
     "pg": "^8.12.0",
     "redis": "^4.7.0"
